--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: executando o docker
-        run: docker run docker/whalesay cowsay
+        run: docker run docker/whalesay cowsay CONSEGUI FAZER MEU PRIMEIRO WORKFLOW
         
       - name: Run a multi-line script
         run: 
